routes tried, failed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title><% title %></title>
+  </head>
     <body>
         <form action="/quotes" method="POST">
             <input type="text" placeholder="name" name="name">
